[gd_scene load_steps=23 format=3 uid="uid://bfickitu6wq2g"]

[ext_resource type="Script" path="res://Actors/Monsters/monster.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bee2krelgbdg2" path="res://assets/Sprites/Monsters/orc_warrior_run_anim_f0.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bqde1wvkdxlrg" path="res://assets/Sprites/Monsters/orc_warrior_run_anim_f1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ci2nuscb76egh" path="res://assets/Sprites/Monsters/orc_warrior_run_anim_f2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cqns4tcc6c0in" path="res://assets/Sprites/Monsters/orc_warrior_run_anim_f3.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bdfe67au0w6ja" path="res://assets/Sprites/Monsters/swampy_run_anim_f1.png" id="6"]
[ext_resource type="Texture2D" uid="uid://kiqcw3wjwhkl" path="res://assets/Sprites/Monsters/swampy_run_anim_f2.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bdtxwg6oj1tk0" path="res://assets/Sprites/Monsters/swampy_run_anim_f3.png" id="8"]
[ext_resource type="Texture2D" uid="uid://b1xfs8m216abc" path="res://assets/Sprites/Monsters/skelet_run_anim_f0.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bnmg0fkep8mle" path="res://assets/Sprites/Monsters/skelet_run_anim_f1.png" id="10"]
[ext_resource type="Texture2D" uid="uid://denyj18o2g1qa" path="res://assets/Sprites/Monsters/skelet_run_anim_f2.png" id="11"]
[ext_resource type="Texture2D" uid="uid://b5es0q0knfdqm" path="res://assets/Sprites/Monsters/skelet_run_anim_f3.png" id="12"]
[ext_resource type="Texture2D" uid="uid://bhtvgr1fhnbos" path="res://assets/Graficos/FX/4x4.png" id="13"]
[ext_resource type="AudioStream" uid="uid://dj7lf47k55iy7" path="res://assets/Audio/SFX/smack.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://c2glmmch5frm0" path="res://assets/Audio/SFX/death.wav" id="15_uw7gk"]

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"goblin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}],
"loop": true,
"name": &"skel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}],
"loop": true,
"name": &"slime",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lmpyl"]
radius = 32.0
height = 66.0

[sub_resource type="Animation" id="Animation_0lyyx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="3"]
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4le6v"]
_data = {
"RESET": SubResource("Animation_0lyyx"),
"death": SubResource("3")
}

[sub_resource type="ParticleProcessMaterial" id="4"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(8, 8, 8)
spread = 180.0
initial_velocity_min = 134.0
initial_velocity_max = 136.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 25.64
tangential_accel_max = 26.34
scale_min = 0.2
scale_max = 0.9
color = Color(0.6, 0.576471, 0.635294, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwr6f"]
size = Vector2(80, 70)

[node name="Monster" type="CharacterBody2D" groups=["monsters"]]
self_modulate = Color(1, 1, 1, 0)
collision_layer = 4
collision_mask = 9
script = ExtResource("1")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
light_mask = 0
z_index = 3
position = Vector2(8, 8)
sprite_frames = SubResource("2")
animation = &"slime"
frame_progress = 0.993631

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.8147e-06, 11)
scale = Vector2(0.739128, 0.739128)
shape = SubResource("CapsuleShape2D_lmpyl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_4le6v")
}

[node name="Particles2D" type="GPUParticles2D" parent="."]
light_mask = 0
z_index = 12
position = Vector2(8, 8)
emitting = false
amount = 24
process_material = SubResource("4")
texture = ExtResource("13")
lifetime = 0.3
explosiveness = 1.0
randomness = 0.4
visibility_rect = Rect2(-8, -8, 16, 16)
local_coords = true
draw_order = 0

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-46, -47)
rect = Rect2(-10, -10, 128, 128)

[node name="SfxHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14")
volume_db = -3.0

[node name="SfxDeath" type="AudioStreamPlayer2D" parent="."]
position = Vector2(951.513, 520.097)
stream = ExtResource("15_uw7gk")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(16, 16)

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-52, -15)
scale = Vector2(0.743532, 0.743532)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color(0.388235, 0.905882, 0, 1)
position = Vector2(70, 34)
shape = SubResource("RectangleShape2D_hwr6f")

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="finished" from="SfxDeath" to="." method="_on_SfxDeath_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
